--- a/locales/cs.json
+++ b/locales/cs.json
@@ -2,6 +2,7 @@
     "ui": {
       "confirm": "Potvrdit",
       "cancel": "Zrušit",
+      "select": "Vybrat",
       "delete": "Smazat",
       "firstname": "Křestní Jméno",
       "lastname": "Příjmení",
@@ -11,6 +12,12 @@
       "non_binary": "Nebinární",
       "create_char": "Vytvořit charakter",
       "create_a_char": "Vytvořit nový charakter",
-      "irreversible_ation": "Tato akce je nevratná"
+      "irreversible_ation": "Tato akce je nenávratná",
+      "char_location": "Lokace:",
+      "last_played": "Naposledy hráno:",
+      "day": "DD",
+      "month": "MM",
+      "year": "RRRR",
+      "max_chars": "Byl dosažen maximální počet charakterů."
       }
   }
