--- a/locales/cs.json
+++ b/locales/cs.json
@@ -12,7 +12,7 @@
       "non_binary": "Nebinární",
       "create_char": "Vytvořit charakter",
       "create_a_char": "Vytvořit nový charakter",
-      "irreversible_ation": "Tato akce je nenávratná",
+      "irreversible_action": "Tato akce je nenávratná",
       "char_location": "Lokace:",
       "last_played": "Naposledy hráno:",
       "day": "DD",
