--- a/locales/en.json
+++ b/locales/en.json
@@ -12,7 +12,7 @@
     "non_binary": "Non-Binary",
     "create_char": "Create Character",
     "create_a_char": "Create a new Character",
-    "irreversible_ation": "This action is irreversible",
+    "irreversible_action": "This action is irreversible",
     "char_location": "Location:",
     "last_played": "Last Played:",
     "day": "DD",
