--- a/locales/cs.json
+++ b/locales/cs.json
@@ -1,23 +1,22 @@
 {
-    "ui": {
-      "confirm": "Potvrdit",
-      "cancel": "Zrušit",
-      "select": "Vybrat",
-      "delete": "Smazat",
-      "firstname": "Křestní Jméno",
-      "lastname": "Příjmení",
-      "gender": "Pohlaví",
-      "male": "Muž",
-      "female": "Žena",
-      "non_binary": "Nebinární",
-      "create_char": "Vytvořit charakter",
-      "create_a_char": "Vytvořit nový charakter",
-      "irreversible_action": "Tato akce je nenávratná",
-      "char_location": "Lokace:",
-      "last_played": "Naposledy hráno:",
-      "day": "DD",
-      "month": "MM",
-      "year": "RRRR",
-      "max_chars": "Byl dosažen maximální počet charakterů."
-      }
+  "ui": {
+    "confirm": "Potvrdit",
+    "cancel": "Zrušit",
+    "select": "Vybrat",
+    "delete": "Smazat",
+    "firstname": "Křestní Jméno",
+    "lastname": "Příjmení",
+    "gender": "Pohlaví",
+    "male": "Muž",
+    "female": "Žena",
+    "non_binary": "Nebinární",
+    "create_char": "Vytvořit charakter",
+    "create_a_char": "Vytvořit nový charakter",
+    "irreversible_action": "Tato akce je nenávratná",
+    "delete_character": "Delete Character",
+    "delete_prompt": "Are you sure you want to delete %s",
+    "char_location": "Lokace:",
+    "last_played": "Naposledy hráno:",
+    "max_chars": "Byl dosažen maximální počet charakterů."
   }
+}
