--- a/locales/en.json
+++ b/locales/en.json
@@ -4,20 +4,19 @@
     "cancel": "Cancel",
     "select": "Select",
     "delete": "Delete",
-    "firstname": "First Name",
-    "lastname": "Last Name",
+    "firstname": "First name",
+    "lastname": "Last name",
     "gender": "Gender",
     "male": "Male",
     "female": "Female",
     "non_binary": "Non-Binary",
     "create_char": "Create Character",
-    "create_a_char": "Create a new Character",
+    "create_a_char": "Create a Character",
+    "delete_character": "Delete Character",
+    "delete_prompt": "Are you sure you want to delete %s",
     "irreversible_action": "This action is irreversible",
-    "char_location": "Location:",
-    "last_played": "Last Played:",
-    "day": "DD",
-    "month": "MM",
-    "year": "YYYY",
+    "char_location": "Location",
+    "last_played": "Last played",
     "max_chars": "Maximum number of slots reached"
-    }
+  }
 }
