Update cs locales

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -4,7 +4,7 @@
     "cancel": "Zrušit",
     "select": "Vybrat",
     "delete": "Smazat",
-    "firstname": "Křestní Jméno",
+    "firstname": "Křestní jméno",
     "lastname": "Příjmení",
     "gender": "Pohlaví",
     "male": "Muž",
@@ -13,8 +13,8 @@
     "create_char": "Vytvořit charakter",
     "create_a_char": "Vytvořit nový charakter",
     "irreversible_action": "Tato akce je nenávratná",
-    "delete_character": "Delete Character",
-    "delete_prompt": "Are you sure you want to delete %s",
+    "delete_character": "Vymazat charakter",
+    "delete_prompt": "Jste si jistí, že chcete smazat charakter %s",
     "char_location": "Lokace:",
     "last_played": "Naposledy hráno:",
     "max_chars": "Byl dosažen maximální počet charakterů."
