--- a/locales/en.json
+++ b/locales/en.json
@@ -18,6 +18,7 @@
     "char_location": "Location",
     "last_played": "Last played",
     "max_chars": "Maximum number of slots reached",
-    "spawn_locations": "Spawn Locations"
+    "spawn_locations": "Spawn Locations",
+    "select_character": "Select Character"
   }
 }
