--- a/locales/nl.json
+++ b/locales/nl.json
@@ -16,7 +16,7 @@
       "delete_prompt": "Weet je zeker dat je %s wilt verwijderen",
       "irreversible_action": "Deze actie is onomkeerbaar",
       "char_location": "Locatie",
-      "last_played": "Laats gespeeld",
+      "last_played": "Laatst gespeeld",
       "max_chars": "Maximum aantal slots bereikt",
       "spawn_locations": "Spawn Locaties",
       "select_character": "Selecteer Karakter"
