--- a/locales/nl.json
+++ b/locales/nl.json
@@ -10,16 +10,16 @@
       "male": "Man",
       "female": "Vrouw",
       "non_binary": "Non-Binair",
-      "create_char": "Creëer Karakter",
-      "create_a_char": "Creëer een Karakter",
-      "delete_character": "Verwijder Karakter",
+      "create_char": "Creëer Personage",
+      "create_a_char": "Creëer een Personage",
+      "delete_character": "Verwijder Personage",
       "delete_prompt": "Weet je zeker dat je %s wilt verwijderen",
       "irreversible_action": "Deze actie is onomkeerbaar",
       "char_location": "Locatie",
       "last_played": "Laatst gespeeld",
       "max_chars": "Maximum aantal slots bereikt",
       "spawn_locations": "Spawn Locaties",
-      "select_character": "Selecteer Karakter"
+      "select_character": "Selecteer Personage"
     }
   }
   
