--- a/locales/fr.json
+++ b/locales/fr.json
@@ -13,12 +13,12 @@
     "create_char": "Créer personnage",
     "create_a_char": "Créer un nouveau personnage",
     "irreversible_action": "Cette action est irréversible",
-    "delete_character": "Delete character",
-    "delete_prompt": "Voulez vous vraiment éffacer %s",
-    "char_location": "Location",
+    "delete_character": "Effacer le personnage",
+    "delete_prompt": "Voulez vous vraiment effacer %s",
+    "char_location": "Emplacement",
     "last_played": "Dernier joué",
     "max_chars": "Nombre maximum d'emplacements atteints",
-    "spawn_locations": "Lieux de ponte",
-    "select_character": "Sélectionner un caractère"
+    "spawn_locations": "Lieux d'apparition",
+    "select_character": "Sélectionner un personnage"
   }
 }
