--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -9,16 +9,16 @@
     "gender": "Gênero",
     "male": "Masculino",
     "female": "Feminino",
-    "non_binary": "Não-Binário",
-    "create_char": "Criar Personagem",
-    "create_a_char": "Criar um Personagem",
-    "delete_character": "Excluir Personagem",
-    "delete_prompt": "Você tem certeza que deseja excluir %s",
+    "non_binary": "Não-binário",
+    "create_char": "Criar personagem",
+    "create_a_char": "Criar um personagem",
+    "delete_character": "Excluir personagem",
+    "delete_prompt": "Você tem certeza que deseja excluir %s?",
     "irreversible_action": "Esta ação é irreversível",
     "char_location": "Localização",
     "last_played": "Jogado pela última vez",
-    "max_chars": "Númerto máximo de personagens atingido",
-    "spawn_locations": "Localizações de Nascimento",
-    "select_character": "Selecionar Personagem"
+    "max_chars": "Número máximo de personagens atingido",
+    "spawn_locations": "Localizações de nascimento",
+    "select_character": "Selecionar personagem"
   }
 }
