--- a/locales/nl.json
+++ b/locales/nl.json
@@ -13,4 +13,6 @@
   "female": "Vrouw",
   "non_binary": "Niet-binair",
   "date_of_birth": "Geboortedatum"
+  "withdraw": "Opnemen",
+  "deposit": "Storten"
 }
