fix(locales/cs): typography, more natural phrases

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -1,9 +1,9 @@
 {
   "empty_slot": "Prázdný slot",
   "create_character": "Vytvořit novou postavu",
-  "select_character_title": "Výběr Postavy",
-  "delete_character_title": "Smazat Postavu",
-  "select_character": "Vyber si svou postavu",
+  "select_character_title": "Výběr postavy",
+  "delete_character_title": "Smazání postavy",
+  "select_character": "Vybrat postavu",
   "delete_character": "Smazat postavu",
   "delete_character_confirm": "Jsi si jistý(á), že chceš smazat postavu %s %s?  \nTuto akci nelze vrátit.",
   "firstname": "Jméno",
