fix(locales/cs): capitalization

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -12,5 +12,5 @@
   "male": "Muž",
   "female": "Žena",
   "non_binary": "Nebinární",
-  "date_of_birth": "Datum Narození"
+  "date_of_birth": "Datum narození"
 }
