refactor(groups): change db structure and remove group locales
Reverts some changes and implements other tweaks.
Grades are now stored as a separate table (rather than JSON).
Groups will add all columns to the OxGroup state.
Removed default groups.

--- a/locales/en.json
+++ b/locales/en.json
@@ -14,15 +14,5 @@
   "non_binary": "Non-Binary",
   "date_of_birth": "Date of birth",
   "withdraw": "Withdraw",
-  "deposit": "Deposit",
-  "groups": {
-    "police": {
-      "name": "Los Santos Police Department",
-      "grades": ["Cadet", "Officer", "Sergeant", "Captain", "Commander", "Chief"]
-    },
-    "dispatch": {
-      "name": "Police Dispatch",
-      "grades": ["Dispatcher"]
-    }
-  }
+  "deposit": "Deposit"
 }
