--- a/locales/en.json
+++ b/locales/en.json
@@ -1,19 +1,10 @@
 {
-  "empty_slot": "Empty slot",
   "create_character": "Create a new character",
-  "select_character_title": "Character Selection",
-  "delete_character_title": "Delete Character",
-  "select_character": "Select a character",
-  "delete_character": "Delete a character",
-  "delete_character_confirm": "Are you sure you want to delete %s %s?  \nThis action is irreversible.",
   "firstname": "First name",
   "lastname": "Last name",
   "gender": "Gender",
   "male": "Male",
   "female": "Female",
   "non_binary": "Non-Binary",
-  "date_of_birth": "Date of birth",
-  "withdraw": "Withdraw",
-  "deposit": "Deposit",
-  "transfer": "Bank transfer"
+  "date_of_birth": "Date of birth"
 }
