fix(locales/en): re-add not so useless locales
Why did vscode not display these in search..

--- a/locales/en.json
+++ b/locales/en.json
@@ -6,5 +6,8 @@
   "male": "Male",
   "female": "Female",
   "non_binary": "Non-Binary",
-  "date_of_birth": "Date of birth"
+  "date_of_birth": "Date of birth",
+  "withdraw": "Withdraw",
+  "deposit": "Deposit",
+  "transfer": "Bank transfer"
 }
