--- a/locales/en.json
+++ b/locales/en.json
@@ -9,6 +9,5 @@
   "date_of_birth": "Date of birth",
   "withdraw": "Withdraw",
   "deposit": "Deposit",
-  "transfer": "Bank transfer",
-  "invoice_payment": "Invoice payment"
+  "transfer": "Bank transfer"
 }
