fix(locales/ro): small typo

--- a/locales/ro.json
+++ b/locales/ro.json
@@ -1,5 +1,5 @@
 {
-  "create_character": "Crează un nou caracter",
+  "create_character": "Creează un nou caracter",
   "firstname": "Prenume",
   "lastname": "Nume",
   "gender": "Gen",
