update(locales/tr): missing
Signed-off-by: HellPortal <104918285+HellPortal@users.noreply.github.com>

--- a/locales/tr.json
+++ b/locales/tr.json
@@ -1,14 +1,23 @@
 {
-  "create_character": "Yeni karakter oluştur",
-  "firstname": "İsim",
-  "lastname": "Soyisim",
+  "create_character": "Yeni bir karakter oluştur",
+  "firstname": "Ad",
+  "lastname": "Soyad",
   "gender": "Cinsiyet",
   "male": "Erkek",
   "female": "Kadın",
-  "non_binary": "İkilik Dışı",
-  "date_of_birth": "Doğum tarihi",
+  "non_binary": "İkili Olmayan",
+  "date_of_birth": "Doğum Tarihi",
   "withdraw": "Para çek",
   "deposit": "Para yatır",
   "transfer": "Banka transferi",
-  "invoice_payment": "Fatura ödemesi"
+  "invoice_payment": "Fatura ödemesi",
+  "hours": "saat",
+  "minutes": "dakika",
+  "seconds": "saniye",
+  "ban_indefinite": "Bu yasak süresizdir.",
+  "ban_expires_in": "Yasağın süresi %s ${hours}, %s ${minutes} ve %s ${seconds} sonra sona erecek.",
+  "ban_notice": "⚠️ Bu sunucudan yasaklandın! ⚠️\nYasak tarihi: %s\nSebep: %s\n\n%s",
+  "userid_is_active": "Kullanıcı ID'niz (%s) zaten aktif.",
+  "no_license": "Oyun lisansınızı doğrulayamadık.",
+  "server_restarting": "Sunucu yeniden başlatılmak üzere. Bu anda katılamazsınız."
 }
