update french locales

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -10,5 +10,14 @@
   "withdraw": "Retrait",
   "deposit": "Dépôt",
   "transfer": "Virement",
-  "invoice_payment": "Facture"
+  "invoice_payment": "Facture",
+  "hours": "heures",
+  "minutes": "minutes",
+  "seconds": "secondes",
+  "ban_indefinite": "Cette bannissement ne sera pas expiré.",
+  "ban_expires_in": "Le bannissement expire dans %s ${heures}, %s ${minutes}, et %s ${secondes}.",
+  "ban_notice": "⚠️ Vous avez été banni de ce serveur ! ⚠️\nBannissement effectué le : %s\nRaison : %s\n\n%s",
+  "userid_is_active": "Votre userId (%s), est déjà actif.",
+  "no_license": "Nous n'avons pas pu vérifier votre licence de jeu.",
+  "server_restarting": "Le serveur est en train de redémarrer. Vous ne pouvez pas vous connecter pour le moment."
 }
