--- a/locales/fr.json
+++ b/locales/fr.json
@@ -14,9 +14,9 @@
   "hours": "heures",
   "minutes": "minutes",
   "seconds": "secondes",
-  "ban_indefinite": "Cette bannissement ne sera pas expiré.",
-  "ban_expires_in": "Le bannissement expire dans %s ${hours}, %s ${minutes}, et %s ${seconds}.",
-  "ban_notice": "⚠️ Vous avez été banni de ce serveur ! ⚠️\nBannissement effectué le : %s\nRaison : %s\n\n%s",
+  "ban_indefinite": "Ce ban n'expirera pas.",
+  "ban_expires_in": "Ce ban expire dans %s ${hours}, %s ${minutes}, et %s ${seconds}.",
+  "ban_notice": "⚠️ Vous avez été banni de ce serveur ! ⚠️\nBanni le : %s\nRaison : %s\n\n%s",
   "userid_is_active": "Votre userId (%s), est déjà actif.",
   "no_license": "Nous n'avons pas pu vérifier votre licence de jeu.",
   "server_restarting": "Le serveur est en train de redémarrer. Vous ne pouvez pas vous connecter pour le moment."
