--- a/locales/es.json
+++ b/locales/es.json
@@ -10,7 +10,7 @@
   "withdraw": "Retirar",
   "deposit": "Depositar",
   "transfer": "Transferencia bancaria",
-  "invoice_payment": "Pago de factura"
+  "invoice_payment": "Pago de factura",
   "hours": "horas",
   "minutes": "minutos",
   "seconds": "segundos",
